--- a/api/.env
+++ b/api/.env
@@ -1,5 +1,5 @@
-DB_USER=syahmirazak
-DB_PASSWORD=
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_NAME=wira_ranking
+DB_USER=postgres.hgrvcpskhwzfegqqyrmd
+DB_PASSWORD=VfDAauq249AcwrPI
+DB_HOST=aws-0-ap-southeast-1.pooler.supabase.com
+DB_PORT=6543
+DB_NAME=postgres
